<resources>
    <string name="app_name">TradeToolApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sentry_dsn">
        https://9635ae01e9a7496d99beab7b71bdbc9a@sentry.io/1313631
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_visits">Start Visits</string>
    <string name="start_day">Start Day</string>
    <string name="no_related_visits">No related visits</string>
    <string name="select_visit_type">Select Visit type to proceed</string>
    <string name="joseph_daudi">Joseph Daudi</string>
    <string name="register_new_product">Register POSM</string>
    <string name="stock">Stock</string>
    <string name="check_out">Check Out</string>
    <string name="survey">Survey</string>
    <string name="promo_products">Promo Products</string>
    <string name="sales">Sales</string>
    <string name="competitor_products">Competitor Products</string>
    <string name="our_products">Our Products</string>
    <string name="market_information">Market Information</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_product">Search Product…</string>
    <string name="free">Free</string>
    <string name="qty">Qty</string>
    <string name="question_one">What are the THREE main reasons you didn\'t purchase [PRODUCT] from [COMPANY]?</string>
    <string name="question_two">Do you like our Services?</string>
    <string name="question_three">How is our Services?</string>
    <string name="question_four">Rate our Services</string>
    <string name="question_five">How likely are you to suggest our services to another client?</string>
    <string name="question_six">Will you use our services again?</string>
    <string name="question_seven">What items did you like the most?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string-array name="products">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
    </string-array>
    <string name="speak_now">Speak now</string>
</resources>
